# celery-example

./: .dockerignore  .gitignore  Dockerfile.celery  README.md  docker-compose.yaml  pyproject.toml
src/: celery_app.py  my_app.py  tasks.py  utils.py
