[tool.poetry]
name = "cel"
version = "0.1.0"
description = ""
authors = ["Michael Wayman <michaelwayman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = {version = "^5.3.0", extras = ["redis"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
